--- a/css/style.css
+++ b/css/style.css
@@ -467,8 +467,8 @@ header::before {
 }
 
 .big-slider__item img {
-    max-width: 100%;
-    height: 100%;
+    width: 100%;
+    height: auto;
     object-fit: cover;
 }
 .big-slider__item-container {
@@ -881,7 +881,6 @@ header::before {
     transform: translateY(-60px);
     width: 100%;
     top: 0;
-    
 }
 .about__header span{
     height: 1px;
@@ -972,7 +971,8 @@ header::before {
 }
 @media (max-width:425px) {
     .about__header{
-        margin-top: 45px;
+        margin-top: 0px;
+        padding-bottom: 0px;
     }
     .page__about-slider {
         margin-top: 100px;
@@ -1056,6 +1056,7 @@ header::before {
     justify-content: flex-start;
     padding: 0;
     margin-top: 22px;
+    margin-bottom: 90px;
 }
 
 .contacts__item {
@@ -1063,9 +1064,9 @@ header::before {
 .contacts__right {
     width: 75%;
 }
-.contacts__map img{
+.contacts__map {
     max-width: 100%;
-    height: auto;
+    height: 100%;
     padding-left: 20px;
 }
 
@@ -1086,7 +1087,7 @@ header::before {
     .contacts__right {
         width: 100%;
     }
-    .contacts__map img{
+    .contacts__map {
         padding: 0;
     }
 }
