--- a/css/style.css
+++ b/css/style.css
@@ -193,6 +193,8 @@ body {
     display: block;
 }
 
+
+
 /* ------------------------------- */
 
 header {
@@ -687,6 +689,91 @@ header::before {
     }
 }
 /* ------------------------ */
+
+.page__call {
+    position: fixed;
+    display: flex;
+    flex-direction: row-reverse;
+    width: 300px;
+    text-transform: uppercase;
+    z-index: 50;
+    top:70%;
+    right: 0;
+}
+.call__body {
+    display: flex;
+    flex-direction: column;
+    z-index: auto;
+}
+.call__button {
+    font-family: Circe;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 25px;
+    letter-spacing: 0.01em;
+    background-color: var(--button);
+    color: var(--main-bg-color);
+    padding: 18px 25px;
+    display: flex;
+    align-items: center;
+    width: 260px;
+    gap: 25px;
+}
+.call__hide span{
+    border-top: 1px solid var(--main-bg-color);
+    width: 16px;
+    height: 0px;
+}
+.call__hide {
+    font-family: Circe;
+    font-size: 10px;
+    font-weight: 700;
+    line-height: 22px;
+    letter-spacing: 0.01em;
+    background-color: #D9D9D9;
+    color: var(--main-bg-color);
+    padding: 4px 16px;
+    width: 120px;
+    margin-left: auto;
+    border-radius: 0px 0px 0px 6px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 8px;
+}
+._hide {
+    transform: translateX(215px);
+}
+.call__button._hide {
+    padding: 10px 10px;
+}
+
+@media (max-width:767px) {
+    .call__button {
+        width: 174px;
+        padding: 10px 25px;
+        font-size: 12px;
+    }
+}
+.call__img-hide {
+    display: none;
+}
+.call__img-hide._show{
+    display: block;
+}
+@media (max-width:425px){
+
+    ._hide {
+        transform: translateX(130px);
+    }
+    .call__button._hide {
+        padding: 10px 10px;
+    }
+}
+
+/* ------------------------ */
+
+
 .page__menu {
     padding-top: 90px;
     padding-bottom: 132px;
@@ -968,12 +1055,13 @@ header::before {
     .about-slider__container .slick-arrow.slick-next {
         right: 10%;
     }
-}
-@media (max-width:425px) {
     .about__header{
         margin-top: 0px;
         padding-bottom: 0px;
     }
+}
+@media (max-width:425px) {
+
     .page__about-slider {
         margin-top: 100px;
         margin-bottom: 100px;
